# ROS2_project

./: LICENSE  README.md  pyproject.toml
dashboard/: readme.txt
dashboard/backend/: Cargo.toml  nav_controller.py  preview_ga.py
dashboard/backend/src/: main.rs
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/src/: App.jsx  index.css
install/: local_setup.sh  setup.sh
install/launch_pal/share/launch_pal/: package.ps1  package.sh
install/mecanum_drive_controller/include/mecanum_drive_controller/: mecanum_drive_controller_parameters.hpp
install/mecanum_drive_controller/share/mecanum_drive_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  mecanum_drive_plugin.xml  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/omni_base_bringup/share/omni_base_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/omni_base_controller_configuration/share/omni_base_controller_configuration/: local_setup.bash  local_setup.dsv  (+5 more)
log/: latest_build
src/my_robot_bringup/config/: nav2_params.yaml
src/my_robot_bringup/launch/: cartographer.launch.py  display.launch.py  ekf.launch.py  gazebo_control.launch.py  navigation.launch.py
src/my_robot_bringup/urdf/: omni_base.urdf
src/my_robot_bringup/worlds/: hospital_aws.world  hospital_full.world
src/ros2_gui_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1373 files in other folders)
